# RFL

./: .clang-format  .dockerignore  .gitignore  .plzconfig  CMakeLists.txt  Dockerfile  Makefile  README.md  RFL.code-workspace  TODO.md
.github/: testingJobRecreation.env
.github/actions/install-armadillo/: action.yml
.github/workflows/: build_and_test.yml  build_and_test_release.yml  ci.yml  combination_selection.py  compatability_tests.yml  linter.yml
RFL_source/: CMakeLists.txt  README.md  TODO.md  newREADME.md
RFL_source/include/: Cliff.hpp  Geom24.hpp
RFL_source/new_source/: Action.cpp  Action.hpp  CMakeLists.txt  Clifford.cpp  Clifford.hpp  DiracOperator.cpp  DiracOperator.hpp  GslRng.hpp  Hamiltonian.cpp  Hamiltonian.hpp  IAction.hpp  IAlgorithm.hpp  IDiracOperatorDerivatives.cpp  IDiracOperatorDerivatives.hpp  IRng.hpp  Metropolis.cpp  Metropolis.hpp  Simulation.cpp  Simulation.hpp
RFL_source/new_source/BarrettGlaser/: Action.hpp  Hamiltonian.cpp  Hamiltonian.hpp  Metropolis.cpp  Metropolis.hpp
RFL_source/new_source/tests/: CMakeLists.txt  tAction.cpp  tBenchmark.cpp  tClifford.cpp  tDiracOperator.cpp  tGslRng.cpp  tHamiltonian.cpp  tMetropolis.cpp  tSimulation.cpp
RFL_source/new_source/tests/performance/: CMakeLists.txt  tBenchmark.cpp
RFL_source/original_source/source/: CMakeLists.txt  HMC.cpp  HMC_core.cpp  MMC_core.cpp  cliff.cpp
RFL_source/original_source/tests/: CMakeLists.txt  action_tests.cpp  delta_tests.cpp
RFL_source/original_source/tests/OldCode/HMC/: duav.cpp
RFL_source/original_source/tests/OldCode/derivative/: main.cpp
RFL_source/original_source/tests/OldCode/leapfrog/: Makefile  global.cpp  reversibility.cpp
RFL_source/original_source/tests/OldCode/optimal/: main.cpp
RFL_source/source/: CMakeLists.txt  HMC.cpp  HMC_core.cpp  MMC.cpp  MMC_core.cpp  action.cpp  cliff.cpp  clifford.cpp  derivative.cpp  geometry.cpp  hamiltonian.cpp  leapfrog.cpp  metropolis.cpp  misc.cpp
RFL_source/tests/: CMakeLists.txt  action_tests.cpp  clifford.test.cpp  compilation_tests.cpp  delta_tests.cpp  derivative_tests.cpp  geometry.test.cpp
RFL_source/tests/Doctests/: CMakeLists.txt  action_tests.cpp  compilation_test.cpp  delta_tests.cpp
RFL_source/tests/GTests/: action_tests.cpp  compilation_tests.cpp  geometry.test.cpp
RFL_source/tests/OldCode/HMC/: duav.cpp  main.cpp
RFL_source/tests/OldCode/action/: main.cpp
RFL_source/tests/OldCode/compilation/: main.cpp
RFL_source/tests/OldCode/delta/: Makefile  main.cpp
RFL_source/tests/OldCode/derivative/: main.cpp
RFL_source/tests/OldCode/leapfrog/: global.cpp  reversibility.cpp
RFL_source/tests/OldCode/omega/: main.cpp
RFL_source/tests/OldCode/optimal/: main.cpp
build_defs/: BUILD  cmake.build_defs  gnu.build_defs
cmake/: Ccache.cmake  Doxygen.cmake
docker/: Dockerfile
docker/base/: Dockerfile  Makefile
docker/cmake/: Dockerfile  Makefile
docs/: Requirements.md
examples/: CMakeLists.txt  README.md  mauro_hmc_example.cpp  mauro_thesis_example.cpp
examples/Benchmark/: CMakeLists.txt  MauroVsNew.cpp
examples/Type13/: CMakeLists.txt  EigenvalueRecorder.cpp  EigenvalueRecorder.hpp  Type13Metropolis.cpp
include/: clifford.hpp  geometry.hpp  params.hpp  statistics.hpp  utils.hpp
playground/: CMakeLists.txt  README.md  playground.cpp
playground/cpp/: BUILD  playground.cpp
playground/cpp/helpers/: actions.hpp
plugins/: BUILD
source/: CMakeLists.txt  HMC.cpp  HMC_core.cpp  HMC_fix.cpp  HMC_rand.cpp  MMC.cpp  MMC_core.cpp  action.cpp  clifford.cpp  derivative.cpp  geometry.cpp  hamiltonian.cpp  leapfrog.cpp  metropolis.cpp  misc.cpp  params.cpp  statistics.cpp  utils.cpp
src/RFL/: CMakeLists.txt  README.md
src/RFL/cmake/: Armadillo.cmake  GSL.cmake  GitRoot.cmake  LoadGoogleTest.cmake  Please.cmake
src/RFL/examples/: BUILD  mauro_thesis_example.cpp
src/RFL/examples/Type13/: BUILD
src/RFL/new_RFL/: BUILD  Clifford.hpp  DiracOperator.hpp  IAction.hpp  IAlgorithm.hpp  IDiracOperator.hpp  Simulation.hpp
src/RFL/new_RFL/BarrettGlaser/: Action.cpp  Action.hpp  Hamiltonian.cpp  Hamiltonian.hpp  Metropolis.cpp  Metropolis.hpp
src/RFL/new_RFL/tests/: BUILD  tAction.cpp  tClifford.cpp  tDiracOperator.cpp  tGslRng.cpp  tHamiltonian.cpp  tMetropolis.cpp  tSimulation.cpp
src/RFL/new_RFL/tests/performance/: CMakeLists.txt  tBenchmark.cpp
src/RFL/old_RFL/: BUILD
src/RFL/old_RFL/source/: CMakeLists.txt  hamiltonian.cpp  metropolis.cpp
src/RFL/old_RFL/tests/: BUILD  clifford.test.cpp  derivative_tests.cpp  geometry.test.cpp
src/RFL/old_RFL/tests/OldCode/leapfrog/: GLOB.txt  Makefile
src/cmake/: Doxygen.cmake
tests/: CMakeLists.txt  Makefile  action_tests.cpp  doctest_main.cpp
tests/Doctests/: CMakeLists.txt  action_tests.cpp  compilation_test.cpp  delta_tests.cpp  doctest_main.cpp
tests/GTests/: CMakeLists.txt  action_tests.cpp  clifford.test.cpp  compilation_tests.cpp  delta_tests.cpp  derivative_tests.cpp  geometry.test.cpp
tests/HMC/: Makefile  duav.cpp  main.cpp
tests/action/: main.cpp
tests/compilation/: main.cpp
tests/derivative/: in.txt  main.cpp
tests/leapfrog/: reversibility.cpp
tests/omega/: main.cpp
tests/optimal/: Makefile  main.cpp
vendors/: BUILD  CMakeLists.txt  README.md
vendors/armadillo-12.6.6/: docs.html
vendors/googletest/: CMakeLists.txt
